public/style.css
/* ... */
@font-face {
    font-family: poppins;
    src: url("./fonts/Poppins-Bold.ttf");
}

@font-face {
    font-family: raleway;
    src: url("./fonts/Raleway-VariableFont_wght.ttf");
}

body {   
    display: flex;
    flex-direction: column;
    margin: 0px;
    height: 100vh;
    background-color: var(--black4);
    overflow: hidden;
    justify-content: center;
    align-items: center;
}

/* Header */
header {
    position: absolute;
    top: 0%;
    display: flex;
    width: 100%;
    padding: var(--big) var(--big) 0px var(--big);
    box-sizing: border-box;
    gap: var(--medium);
    height: var(--header-height);
}

.headerNavButtonContainer {
    display: flex;
    gap: var(--medium)
}

a {
    text-decoration: none;
}

a:visited {
    color: white;
}

button {
    outline: none;
}

button i {
    margin-left: var(--small);
}

.rhombus {
    padding: var(--small) var(--medium);
    border-radius: var(--medium);
    background-color: var(--black3);
    border: var(--border) solid var(--black1);
    transform: skewX(15deg);
    display: flex;
    justify-content: center;
    align-items: center;
    height: var(--button-height);
    box-sizing: border-box;
}

.rhombus span {
    transform: skewX(-15deg);
    color: white;
}

.pageTitle {
    font-family: poppins;
    font-size: var(--page-header);
}

.directory {
    font-family: poppins;
    font-size: var(--important);
}

.main {
    flex: 1;   
    flex-direction: column;
    padding: 0px var(--big);
    padding-bottom: var(--big);
    width: calc(100vw - var(--big) * 2);
    max-height: 80vh;
    margin-top: calc(var(--big) + var(--header-height) + var(--medium));
    /* margin-bottom: var(--big); */
}

@media (max-width: 620px) {
    header {
        flex-direction: column;
        align-items: center;
    }

    .main {
        margin-top: calc(var(--big) + var(--header-height) + var(--medium) * 3);
    }
}

.mainGrid {
    border: var(--border) solid var(--black1);
    border-radius: var(--medium);
    height: 100%;
    display: grid;
    grid-template: 4fr 1fr / 1fr;
    background-color: rgba(15,15,15, 0.3); 
}

.filesUIContainer {
    --radius: calc(var(--medium) - var(--border));

    position: relative;
    grid-row: 2 / 3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: var(--medium);
    max-width: 100%;
    border-radius: 0px 0px var(--radius) var(--radius);
    padding: var(--small) var(--medium);
    background-color: var(--black3);
}

.directoryUIContainer {
    display: flex;
    gap: var(--medium);
}

.directoryButtonsContainer {
    display: flex;
    gap: var(--medium);
}

@media (max-width: 900px) {
    .directoryButtonsContainer {
        display: flex;
        flex-direction: column;
    }
}

.actionBtn, .customFileUpload {
    font-family: poppins;
    font-size: var(--important);
    height: var(--button-height);
    min-width: 100px;
    background-color: var(--black3);
    border: var(--border) solid var(--black1);
    color: white;
    border-radius: 15px;
    padding: 0px var(--medium);
    cursor: pointer;
    font-weight: 1000;
}

.borderTransition:hover, .actionBtn:focus-visible {
    background-color: var(--yellow);
    border: var(--border) solid var(--yellow);
    box-shadow: none;
    color: black;
    animation: 1s colourTransitionBorder infinite alternate;
    animation-timing-function: linear;
}

.redBtn {
    border: var(--border) solid var(--red);
    color: var(--red);
}

.smallActionBtn {
    height: var(--button-height);
    width: var(--button-height);
    background-color: var(--black3);
    font-size: var(--page-header);
    border-radius: var(--medium);
    box-sizing: border-box;
    cursor: pointer;

    i {
        margin: 0px;
    }
}

header button:hover, .actionBtn:hover, .actionBtn:focus-visible, 
.customFileUpload:hover, .customFileUpload:focus-visible, 
.smallActionBtn:hover, .smallActionBtn:focus-visible {
    animation: colourTransitionBorder 1s linear infinite alternate, 
    pulse 0.9s cubic-bezier( 0.79, 0.18, 0.32, 0.83 ) infinite alternate;
    color: black;
}

@keyframes pulse {
    15% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.1);
    }
    90% {
        transform: scale(1);
    }
}

@keyframes colourTransitionBorder {
    from {
        background-color: var(--yellow);
        border: var(--border) solid var(--yellow);
    }
    to {
        background-color: var(--yellowgreen);
        border: var(--border) solid var(--yellowgreen);
    }
}

.directoryContainer {
    --radius: calc(var(--medium) - var(--border));

    width: 100%;
    overflow-y: scroll;
    box-sizing: border-box;
    position: relative;
    display: grid;
    justify-content: center;
    grid-template-rows: repeat(auto-fill, 150px);
    grid-template-columns: repeat(auto-fit, 175px);
    padding: var(--medium);
    gap: var(--medium);
    border-radius: var(--radius) var(--radius) 0px 0px;
    margin: var(--small) 0px;
}
/* ... */

